tests/ui/ferrocene/compiler-arguments/explain/explain_no-code_explain.rs
//@ check-fail
//@ compile-flags: --explain --explain
//~? ERROR not a valid error code

fn main() {}

// ferrocene-annotations: um_rustc_explain
